# feather-spotter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/feather_spotter/: app.py  database.py  detection.py
src/feather_spotter/models/: bird_detection.py
src/feather_spotter/routes/: detect.py
tests/: conftest.py
tests/feather_spotter/: test_app.py  test_detection.py
